--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  audioplayers: ^0.10.0
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +24,4 @@ flutter:
 
   assets:
   - images/
+  - assets/
